Mon Dec 14 20:31:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Session/Session_Container.cpp:
          Use false and extended debug statements

        * connectors/dds4ccm/tests/PSLSampleLost/Receiver/PSL_SampleLost_Receiver_exec.cpp:
          Extended debug info

        * DAnCE/NodeManager/NodeManager_Impl.cpp:
          Removed not needed debug info

        * ciao/Servants/Servant_Impl_T.cpp:
          Layout change

Mon Dec 14 20:07:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/PSLSampleLost/Receiver/PSL_SampleLost_Receiver_exec.cpp:
          Report which port has the real problem

Mon Dec 14 19:23:21 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Getter_T.cpp:
        * connectors/dds4ccm/impl/ndds/Publisher.cpp:
          Resolved fuzz errors/warnings.

Mon Dec 14 19:06:43 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * examples/Hello/descriptors/run_NodeDaemons.pl:
        * examples/Hello/descriptors/run_test.pl:
        * examples/Hello/descriptors/run_test_alias.pl:
        * examples/Hello/descriptors/run_test_without_ns.pl:
          Resolved fuzz errors/warnings.

Mon Dec 14 14:53:13 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Getter/Receiver/Getter_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/Getter/Receiver/Getter_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/Getter/Sender/Getter_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/ListenNotEnabled/Receiver/LNE_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/ListenNotEnabled/Receiver/LNE_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/ListenNotEnabled/Sender/LNE_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/ListenNotEnabled/Sender/LNE_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/Reader/Receiver/Reader_Test_Receiver_exec.h: