@@ -35,27 +35,6 @@ namespace CIAO
 
         virtual void on_data_available( ::DDS::DataReader *rdr);
 
-    virtual void
-    on_requested_incompatible_qos (
-      ::DDS::DataReader_ptr ,
-      const ::DDS::RequestedIncompatibleQosStatus & ) {}
-    virtual void
-    on_sample_rejected (
-      ::DDS::DataReader_ptr ,
-      const ::DDS::SampleRejectedStatus & ) {}
-    virtual void
-    on_liveliness_changed (
-      ::DDS::DataReader_ptr ,
-      const ::DDS::LivelinessChangedStatus & ) {}
-    virtual void
-    on_subscription_matched (
-      ::DDS::DataReader_ptr ,
-      const ::DDS::SubscriptionMatchedStatus & ) {}
-    virtual void
-    on_sample_lost (
-      ::DDS::DataReader_ptr ,
-      const ::DDS::SampleLostStatus & ) {}
-
         static ::DDS::StatusMask get_mask (void);
       private:
         typename CCM_TYPE::listener_type::_var_type listener_;
